--- a/new_tab.html
+++ b/new_tab.html
@@ -22,27 +22,27 @@
     </div>
     
     <form action="http://www.google.com/search" method="get" class="formu" id="ggl">
-        <input class="busqueda" id="ggl-input" title="search" type="text" name="q" autocomplete="off" placeholder="Buscar en Google"/>
+        <input class="busqueda" id="ggl-input" title="Buscar en Google" type="text" name="q" autocomplete="off" placeholder="Buscar en Google"/>
         <input class="boton" type="image" src="img/lupa.jpg" title="GO" height="22px" width="22px"/>
     </form>
 
     <form action="http://www.bing.com/search" method="get" class="formu" id="bin">
-        <input class="busqueda" id="bin-input" title="Introduce el término de búsqueda" type="text" name="q" autocomplete="off" placeholder="Buscar en Bing"/>
+        <input class="busqueda" id="bin-input" title="Buscar en Bing" type="text" name="q" autocomplete="off" placeholder="Buscar en Bing"/>
         <input class="boton" type="image" src="img/lupa.jpg" title="GO" height="22px" width="22px"/>
     </form>
 
     <form action="https://nortonsafe.search.ask.com/web" method="get" class="formu" id="nss">
-        <input class="busqueda" id="nss-input" title="Introduce el término de búsqueda" type="text" name="q" autocomplete="off" placeholder="Buscar con Norton"/>
+        <input class="busqueda" id="nss-input" title="Buscar con Norton" type="text" name="q" autocomplete="off" placeholder="Buscar con Norton"/>
         <input class="boton" type="image" src="img/lupa.jpg" title="GO" height="22px" width="22px"/>
     </form>
 
     <form action="https://duckduckgo.com/" method="get" class="formu" id="ddg">
-        <input class="busqueda" id="ddg-input" title="Introduce el término de búsqueda" type="text" name="q" autocomplete="off" placeholder="Buscar con DuckDuckGo"/>
+        <input class="busqueda" id="ddg-input" title="Buscar con DuckDuckGo" type="text" name="q" autocomplete="off" placeholder="Buscar con DuckDuckGo"/>
         <input class="boton" type="image" src="img/lupa.jpg" title="GO" height="22px" width="22px"/>
     </form>
 
     <form action="https://www.qwant.com/" method="get" class="formu" id="qwa">
-        <input class="busqueda" id="qwa-input" title="Introduce el término de búsqueda" type="text" name="q" autocomplete="off" placeholder="Buscar en Qwant"/>
+        <input class="busqueda" id="qwa-input" title="Buscar en Qwant" type="text" name="q" autocomplete="off" placeholder="Buscar en Qwant"/>
         <input class="boton" type="image" src="img/lupa.jpg" title="GO" height="22px" width="22px"/>
     </form>
 
@@ -58,6 +58,9 @@
         </a>
         <a href="https://github.com/chelmi00" class="mbox">
             <img class="mbox" title="Github" id="github" src="img/github.png"/>
+        </a>
+        <a href="https://www.youtube.com/" class="mbox">
+            <img class="mbox" title="Youtube" id="youtube" src="img/youtube.png"/>
         </a>
     </div>
     
